# agentforge-v5

./: .gitignore  README.md  demo_auto_setup.py  demo_cpu.py  demo_nanogpt.py  pyproject.toml
agentforge/: __main__.py  agent.py  analyzer.py  anti_oscillation.py  cleanup.py  cli.py  config.py  confirm.py  daemon.py  data.py  display.py  experiment.py  generator.py  hardware.py  monitor.py  orchestrator.py  pipeline.py  publish.py  repair.py  runner.py  sandbox.py  scorer.py  state.py  strategy.py  stream.py  validate.py
docs/plans/: 2026-03-16-agentforge-v5-design.md  2026-03-16-agentforge-v5-plan.md  2026-03-16-auto-setup-design.md  2026-03-16-auto-setup-plan.md  2026-03-16-pipeline-parallelization-design.md  2026-03-16-pipeline-parallelization.md  2026-03-16-v51-incremental-design.md
tests/: conftest.py  test_agent.py  test_agent_spec.py  test_analyzer.py  test_anti_oscillation.py  test_cleanup.py  test_cli.py  test_config.py  test_confirm.py  test_daemon.py  test_data.py  test_display.py  test_e2e_pipeline.py  test_experiment.py  test_generator.py  test_hardware.py  test_implement_strategy.py  test_integration.py  test_live_display.py  test_monitor.py  test_orchestrator.py  test_orchestrator_pipeline.py  test_pipeline_event.py  test_pipeline_orchestrator.py  test_pipeline_worker.py  test_repair.py  test_runner.py  test_sandbox.py  test_scorer.py  test_single_monitor.py  test_state.py  test_strategy.py  test_validate.py
